[gd_scene load_steps=14 format=3 uid="uid://b874f4kil7hti"]

[ext_resource type="Script" uid="uid://domu48da70yya" path="res://scripts/新脚本/客栈相关/客栈1/室外/七侠客栈外.gd" id="1_klnk3"]
[ext_resource type="Script" uid="uid://b62d3iwbpwjks" path="res://scripts/新脚本/customer_spawn/店外客人生成.gd" id="3_h3uol"]
[ext_resource type="PackedScene" uid="uid://w1ohaj2lu27j" path="res://scenes/qixia/客栈部分/主体/客栈1室外.tscn" id="3_hjqj2"]
[ext_resource type="Texture2D" uid="uid://ddd320ea5qvbp" path="res://assets/icon/UI/当前位置_一层大厅.png" id="5_d7bb7"]
[ext_resource type="PackedScene" uid="uid://wtxdcnavble5" path="res://scenes/UI/ui界面.tscn" id="5_n3b6s"]
[ext_resource type="Script" uid="uid://dis2idkarpl58" path="res://scripts/新脚本/customer_spawn/店外客人排队新customer_array_outside_pos.gd" id="5_w55sr"]
[ext_resource type="Texture2D" uid="uid://c3exxflml63m4" path="res://assets/bg/客栈1背景/室外/室外排队/椅子.png" id="6_m6h6g"]
[ext_resource type="Script" uid="uid://qtrims5o5tnf" path="res://scripts/新脚本/客人/客人排队位置/arraypos_1.gd" id="6_pj6gw"]
[ext_resource type="Script" uid="uid://bv5ncwhvqekn8" path="res://scripts/新脚本/customer_spawn/店外客人生成点customer_swapn_outside_pos.gd" id="7_nata5"]
[ext_resource type="Script" uid="uid://irjbxbhs0812" path="res://scripts/新脚本/客人/客人排队位置/arraypos_2.gd" id="8_ceop3"]
[ext_resource type="Script" uid="uid://c4beufv6j5jjw" path="res://scripts/新脚本/客人/客人排队位置/arraypos_3.gd" id="9_chrph"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yi77j"]
vertices = PackedVector2Array(1772.25, -17.2266, 2478.74, 658.789, 2758.06, 1295.56, 1703.48, 1203, 647.289, -137.023, -61.1328, 1188, -1896.77, 1250.95, -2446.65, 1096.79, -2352.7, 535.031, -1930.1, 146.078, -845.539, -124.047, -109.813, -163.992, 2320.08, 241.313)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7, 8, 9, 10, 11, 4), PackedInt32Array(3, 5, 4), PackedInt32Array(1, 0, 12)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-110, -174, 648, -147, 1775, -27, 2328, 234, 2488, 655, 2774, 1307, 1703, 1213, -61, 1198, -1898, 1261, -2458, 1104, -2362, 530, -1935, 137, -847, -134)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwra3"]
size = Vector2(86, 85)

[node name="七侠客栈外" type="Node2D"]
position = Vector2(963, 539)
script = ExtResource("1_klnk3")

[node name="大厅节点" type="Node2D" parent="."]

[node name="4293600" type="Node2D" parent="大厅节点"]

[node name="客栈1室外" parent="大厅节点/4293600" instance=ExtResource("3_hjqj2")]
position = Vector2(0, 0)

[node name="室外客人生成" type="Node2D" parent="."]
script = ExtResource("3_h3uol")
metadata/pos = "店内"

[node name="客人进入区域" type="Node2D" parent="室外客人生成"]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="室外客人生成/客人进入区域"]
navigation_polygon = SubResource("NavigationPolygon_yi77j")

[node name="客人区域" type="Node2D" parent="室外客人生成"]
position = Vector2(-80, 918)

[node name="CustomerSwapnOutsidePos" type="Node2D" parent="室外客人生成/客人区域"]
position = Vector2(-885, -1456)
script = ExtResource("7_nata5")

[node name="spwanpos1" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos" groups=["室外生成点"]]
light_mask = 4
visibility_layer = 4
z_index = 1
position = Vector2(-314, 918)
metadata/spawn_num = 1

[node name="spwanpos2" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos" groups=["室外生成点"]]
light_mask = 4
visibility_layer = 4
z_index = 2
position = Vector2(-128, 1123)
metadata/spawn_num = 2

[node name="spwanpos3" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos" groups=["室外生成点"]]
light_mask = 4
visibility_layer = 4
z_index = 3
position = Vector2(2296, 906)
metadata/spawn_num = 3

[node name="spwanpos4" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos" groups=["室外生成点"]]
light_mask = 4
visibility_layer = 4
z_index = 4
position = Vector2(2016, 1060)
metadata/spawn_num = 4

[node name="CustomerSwapnOutEndPos" type="Node2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos"]
position = Vector2(75, 37)

[node name="endpos1" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos/CustomerSwapnOutEndPos" groups=["室外消失点"]]
light_mask = 4
visibility_layer = 4
position = Vector2(-730, 1261)

[node name="endpos2" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos/CustomerSwapnOutEndPos" groups=["室外消失点"]]
light_mask = 4
visibility_layer = 4
position = Vector2(-815, 1004)

[node name="endpos3" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos/CustomerSwapnOutEndPos" groups=["室外消失点"]]
light_mask = 4
visibility_layer = 4
position = Vector2(2615, 1168)

[node name="endpos4" type="Marker2D" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos/CustomerSwapnOutEndPos" groups=["室外消失点"]]
light_mask = 4
visibility_layer = 4
position = Vector2(2436, 941)

[node name="客人生成计时器" type="Timer" parent="室外客人生成/客人区域/CustomerSwapnOutsidePos"]

[node name="CustomerArrayOutsidePos2" type="Node2D" parent="室外客人生成/客人区域"]
position = Vector2(-883, -1457)
script = ExtResource("5_w55sr")

[node name="arraypos1" type="Marker2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2" groups=["室外排队点"]]
light_mask = 8
visibility_layer = 8
position = Vector2(722, 701)
script = ExtResource("6_pj6gw")
metadata/pos = 1
metadata/can_sit = true

[node name="椅子" type="Sprite2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1"]
scale = Vector2(0.35, 0.369455)
texture = ExtResource("6_m6h6g")

[node name="客人" type="Node2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1"]
position = Vector2(16, -129)
scale = Vector2(0.8, 0.8)

[node name="顾客图片" type="Sprite2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1/客人"]
position = Vector2(-2.5, 0)
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1" groups=["室外排队点"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1/Area2D"]
shape = SubResource("RectangleShape2D_fwra3")

[node name="arraypos2" type="Marker2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2" groups=["室外排队点"]]
light_mask = 8
visibility_layer = 8
position = Vector2(507, 703)
script = ExtResource("8_ceop3")
metadata/pos = 2
metadata/can_sit = true

[node name="椅子" type="Sprite2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2"]
scale = Vector2(0.35, 0.369455)
texture = ExtResource("6_m6h6g")

[node name="客人" type="Node2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2"]
position = Vector2(16, -129)
scale = Vector2(0.8, 0.8)

[node name="顾客图片" type="Sprite2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2/客人"]
position = Vector2(-2.5, 0)
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2" groups=["室外排队点"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2/Area2D"]
position = Vector2(-2, 1.5)
shape = SubResource("RectangleShape2D_fwra3")

[node name="arraypos3" type="Marker2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2" groups=["室外排队点"]]
light_mask = 8
visibility_layer = 8
position = Vector2(286, 709)
script = ExtResource("9_chrph")
metadata/pos = 3
metadata/can_sit = true

[node name="椅子" type="Sprite2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3"]
scale = Vector2(0.35, 0.369455)
texture = ExtResource("6_m6h6g")

[node name="客人" type="Node2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3"]
position = Vector2(16, -129)
scale = Vector2(0.8, 0.8)

[node name="顾客图片" type="Sprite2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3/客人"]
position = Vector2(-2.5, 0)
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3" groups=["室外排队点"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3/Area2D"]
position = Vector2(-2, 1.5)
shape = SubResource("RectangleShape2D_fwra3")

[node name="排队客人生成计时器" type="Timer" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2"]

[node name="多于3人排队点" type="Node2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2"]
position = Vector2(883, 1457)

[node name="多于3人排队点" type="Marker2D" parent="室外客人生成/客人区域/CustomerArrayOutsidePos2/多于3人排队点"]
position = Vector2(1109, -737)
metadata/can_sit = true

[node name="进门点" type="Node2D" parent="室外客人生成/客人区域"]
position = Vector2(-883, -1457)

[node name="进门点" type="Marker2D" parent="室外客人生成/客人区域/进门点"]
position = Vector2(1058, 651)

[node name="UI内容" type="Control" parent="."]
light_mask = 2
visibility_layer = 2
z_index = 4090
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="当前位置_店门口" type="TextureRect" parent="UI内容"]
light_mask = 2
visibility_layer = 2
z_index = 4096
layout_mode = 0
offset_left = -937.0
offset_top = 360.0
offset_right = -572.0
offset_bottom = 510.0
texture = ExtResource("5_d7bb7")

[node name="UI界面" parent="UI内容" instance=ExtResource("5_n3b6s")]
light_mask = 2
visibility_layer = 2
z_index = 4096
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 687.0
offset_top = -537.0
offset_right = 727.0
offset_bottom = -497.0
grow_horizontal = 1
grow_vertical = 1

[node name="客人进门随机数" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="室外客人生成/客人区域/CustomerSwapnOutsidePos/客人生成计时器" to="室外客人生成/客人区域/CustomerSwapnOutsidePos" method="_on_客人生成计时器_timeout"]
[connection signal="body_shape_entered" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1/Area2D" to="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1/Area2D" to="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos1" method="_on_area_2d_body_shape_exited"]
[connection signal="body_shape_entered" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2/Area2D" to="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2/Area2D" to="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos2" method="_on_area_2d_body_shape_exited"]
[connection signal="body_shape_entered" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3/Area2D" to="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3/Area2D" to="室外客人生成/客人区域/CustomerArrayOutsidePos2/arraypos3" method="_on_area_2d_body_shape_exited"]
[connection signal="timeout" from="室外客人生成/客人区域/CustomerArrayOutsidePos2/排队客人生成计时器" to="室外客人生成/客人区域/CustomerArrayOutsidePos2" method="_on_排队客人生成计时器_timeout"]
[connection signal="timeout" from="客人进门随机数" to="室外客人生成/客人区域/CustomerSwapnOutsidePos" method="_on_客人进门随机数_timeout"]
